# xai_demand_forecasting

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXTERNAL_SIGNALS_PLAN.md  INSIGHTS_PLAN.md  README.md  app.py  backtest.py  build_features.py  code_review.py  data_quality.py  generate_insights.py  generate_narratives.py  ingest.py  ingest_external.py  migrate.py  profile_data.py  pyproject.toml  run_xai.py  smoke_test.py  validate_external.py  walkthrough.py
external_data/: consumer_sentiment_raw.csv  gas_price_raw.csv  weather_raw.csv
migrations/: 001_raw_tables.sql  002_features_table.sql  002_output_tables.sql  003_features_table.sql  004_narratives.sql  005_external.sql  006_features_add_external.sql  007_insights.sql
tests/: conftest.py  test_contrastive.py  test_correctness.py  test_db.py  test_evaluate.py  test_features.py  test_insights.py  test_narrate.py  test_xai_payloads.py
tools/: fetch_external_raw.py
xai_forecast/: db.py  evaluate.py  features.py  forecast.py  narrate.py  train.py  xai.py
xai_forecast/insights/: __init__.py  agents.py  detectors.py  graph.py  llm_client.py  schemas.py  tools.py
