[project]
name = "xai-demand-forecasting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "shap>=0.44",
    "pandas>=2.0",
    "numpy>=1.26",
    "streamlit>=1.32",
    "datasetsforecast>=0.0.8",
    "plotly>=5.18",
    "tqdm>=4.65",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xai_forecast"]

[tool.uv]
constraint-dependencies = ["numba>=0.61"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
